@@ -4,12 +4,12 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 
-import java.io.IOException;
-import java.io.OutputStream;
+import java.io.*;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Optional;
 import java.util.Scanner;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -17,18 +17,20 @@ import java.util.concurrent.Executors;
 
 public class Server {
 
-    private final static String BASE = "src/server/data";
+    private final static String BASE = "src/server/data/";
     private static HttpServer server;
     private final static Executer executer = new Executer();
 
+
     public static void main(String[] args) throws IOException {
+
 
         prepareDirectory(BASE);
 
         server = HttpServer.create(new InetSocketAddress(42069), 0);
         server.setExecutor(Executors.newSingleThreadExecutor());
-        server.createContext("/server/data", new MyHandler());
         server.createContext("/server/data/", new MyHandler());
+        server.createContext("/server/data/id", new idHandler());
         server.createContext("/exit", new exitHandler());
 
         server.start();
@@ -36,37 +38,31 @@ public class Server {
         System.out.println("Server started");
     }
 
-    static class MyHandler implements HttpHandler {
+    static class idHandler implements HttpHandler {
 
         @Override
         public void handle(HttpExchange exchange) throws IOException {
-            Scanner scanner = new Scanner(exchange.getRequestBody());
+            DataInputStream dataInputStream = new DataInputStream(exchange.getRequestBody());
             String method = exchange.getRequestMethod();
             var tmp = exchange.getRequestURI().getPath().split("/");
             String item = tmp[tmp.length - 1];
-            String result;
+            byte[] result;
 
             switch (method) {
                 case "GET" -> {
                     int status;
                     boolean isValid = false;
-
-                    executer.setCommand(new CommandGet(item, BASE));
+                    var command = new CommandGetById(item, BASE);
+                    executer.setCommand(command);
                     isValid = executer.execute();
 
+
                     if (isValid) {
-                        if (item.endsWith(".txt")) {
-                            Path path = Path.of(BASE + "/" + item);
-                            result = Files.size(path) == 0 ?
-                                     "Worales" : Files.readString(path);
-                        }
-                        else {
-                            result = "No txt file";
-                        }
+                        result = Files.readAllBytes(command.getFile().toPath());
                         status = 200;
                     }
                     else {
-                        result = "Not found";
+                        result = "diam".getBytes();
                         status = 404;
                     }
 
@@ -75,21 +71,25 @@ public class Server {
                 case "POST" -> {
                     int status;
                     boolean isValid = false;
-                    boolean hasText = scanner.hasNext();
+                    boolean hasContent = dataInputStream.available() > 0;
+                    CommandAddById command;
 
-                    if (hasText) {
-                        executer.setCommand(new CommandAdd(item, BASE, scanner.nextLine()));
+                    if (hasContent) {
+                        byte[] content = dataInputStream.readAllBytes();
+                        command = new CommandAddById(item, BASE, content);
+                        executer.setCommand(command);
                         isValid = executer.execute();
                     } else {
-                        executer.setCommand(new CommandAdd(item, BASE));
+                        command = new CommandAddById(item, BASE);
+                        executer.setCommand(command);
                         isValid = executer.execute();
                     }
 
                     if (isValid) {
-                        result = "Created";
+                        result = nextId(command.getFile().toPath()).getBytes();
                         status = 200;
                     } else {
-                        result = "File already exists";
+                        result = "File already exists".getBytes();
                         status = 403;
                     }
                     sendResponse(exchange, result, status);
@@ -97,15 +97,91 @@ public class Server {
                 case "DELETE" -> {
                     int status;
                     boolean isValid = false;
-
-                    executer.setCommand(new CommandDelete(item, BASE));
+                    var command = new CommandDeleteById(item, BASE);
+                    executer.setCommand(command);
                     isValid = executer.execute();
 
                     if (isValid) {
-                        result = "Created";
+                        result = "Deleted".getBytes();
                         status = 200;
                     } else {
-                        result = "Not found";
+                        result = "Not found".getBytes();
+                        status = 404;
+                    }
+                    sendResponse(exchange, result, status);
+                }
+            }
+        }
+    }
+
+    static class MyHandler implements HttpHandler {
+
+        @Override
+        public void handle(HttpExchange exchange) throws IOException {
+            DataInputStream dataInputStream = new DataInputStream(exchange.getRequestBody());
+            String method = exchange.getRequestMethod();
+            var tmp = exchange.getRequestURI().getPath().split("/");
+            Optional<String> item = Optional.ofNullable(tmp[tmp.length - 1]);
+            byte[] result;
+
+            switch (method) {
+                case "GET" -> {
+                    int status;
+                    boolean isValid = false;
+                    var command = new CommandGet(item.orElse(""), BASE);
+                    executer.setCommand(command);
+                    isValid = executer.execute();
+
+
+                    if (isValid) {
+                        result = Files.readAllBytes(command.getFile().toPath());
+                        status = 200;
+                    }
+                    else {
+                        result = new byte[0];
+                        status = 404;
+                    }
+
+                    sendResponse(exchange, result, status);
+                }
+                case "POST" -> {
+                    int status;
+                    boolean isValid = false;
+                    boolean hasContent = dataInputStream.available() > 0;
+                    CommandAdd command;
+
+                    if (hasContent) {
+                        byte[] content = dataInputStream.readAllBytes();
+                        command = new CommandAdd(item.orElse(""), BASE, content);
+                        executer.setCommand(command);
+                        isValid = executer.execute();
+                    } else {
+                        command = new CommandAdd(item.orElse(""), BASE);
+                        executer.setCommand(command);
+                        isValid = executer.execute();
+                    }
+
+                    if (isValid) {
+                        result = nextId(command.getFile().toPath()).getBytes();
+                        status = 200;
+                    } else {
+                        result = "File already exists".getBytes();
+                        status = 403;
+                    }
+                    sendResponse(exchange, result, status);
+                }
+                case "DELETE" -> {
+                    int status;
+                    boolean isValid = false;
+                    var command = new CommandDelete(item.orElse(""), BASE);
+                    executer.setCommand(command);
+                    isValid = executer.execute();
+
+                    if (isValid) {
+                        result = "Deleted".getBytes();
+                        status = 200;
+                    } else {
+                        result = "Not found".getBytes();
                         status = 404;
                     }
                     sendResponse(exchange, result, status);
@@ -120,7 +196,7 @@ public class Server {
         public void handle(HttpExchange exchange) throws IOException {
             System.out.println("Server closing");
 
-            sendResponse(exchange, "200", 200);
+            sendResponse(exchange, "200".getBytes(), 200);
             server.stop(1);
 
             if (server.getExecutor() instanceof ExecutorService executorService) {
@@ -130,11 +206,11 @@ public class Server {
         }
     }
 
-    private static void sendResponse(HttpExchange exchange, String response, int status) throws IOException {
-        exchange.sendResponseHeaders(status, response.length());
+    private static void sendResponse(HttpExchange exchange, byte[] response, int status) throws IOException {
+        exchange.sendResponseHeaders(status, response.length);
         OutputStream out = exchange.getResponseBody();
-        if (!response.isEmpty())
-            out.write(response.getBytes());
+        if (response.length != 0)
+            out.write(response);
         out.close();
     }
 
@@ -145,5 +221,8 @@ public class Server {
             Files.createDirectories(directory);
         }
     }
-}
 
+    static String nextId(Path path) throws IOException {
+        return String.valueOf(Files.list(Path.of(BASE)).toList().indexOf(path) + 1);
+    }
+}
